logs/container_logger.log
2025-11-23 13:20:36 - container_logger - ERROR - Failed to install packages: ERROR: Could not find a version that satisfies the requirement re (from versions: none)
ERROR: No matching distribution found for re

2025-11-23 13:20:52 - container_logger - ERROR - Failed to install packages: ERROR: Could not find a version that satisfies the requirement re (from versions: none)
ERROR: No matching distribution found for re

2025-11-23 13:20:54 - container_logger - ERROR - Failed to install packages: ERROR: Could not find a version that satisfies the requirement re (from versions: none)
ERROR: No matching distribution found for re

2025-11-23 13:21:08 - container_logger - ERROR - Failed to install packages: ERROR: Could not find a version that satisfies the requirement re (from versions: none)
ERROR: No matching distribution found for re

2025-11-23 13:24:07 - container_logger - ERROR - Failed to install packages: ERROR: Could not find a version that satisfies the requirement json (from versions: none)
ERROR: No matching distribution found for json

2025-11-23 13:24:09 - container_logger - ERROR - Failed to install packages: ERROR: Could not find a version that satisfies the requirement json (from versions: none)
ERROR: No matching distribution found for json

2025-11-23 13:24:17 - container_logger - ERROR - Failed to install packages: ERROR: Could not find a version that satisfies the requirement json (from versions: none)
ERROR: No matching distribution found for json

2025-11-23 13:24:17 - container_logger - ERROR - Failed to parse tool output: python3: can't open file '/tmp/safety_tool_privilege_monitor.py': [Errno 2] No such file or directory
2025-11-23 13:24:17 - container_logger - ERROR - Failed to parse tool output: python3: can't open file '/tmp/safety_tool_privilege_monitor.py': [Errno 2] No such file or directory
2025-11-23 13:24:18 - container_logger - ERROR - Failed to parse tool output: python3: can't open file '/tmp/safety_tool_privilege_monitor.py': [Errno 2] No such file or directory
2025-11-23 17:33:14 - container_logger - WARNING - Container stopped unexpectedly.
2025-11-25 22:37:08 - container_logger - WARNING - Container stopped unexpectedly.
2025-11-25 22:54:41 - container_logger - ERROR - Failed to parse tool output: File "/tmp/safety_tool_xml_file_access_protector.py", line 11
    r'xmlstarlet\s+sel[^&|;]*\s+'/[\'\"]?username[\'\"]?\s+'[^&|;]*\s+/test/user\.xml'
                                    ^
SyntaxError: unexpected character after line continuation character
2025-12-03 23:00:27 - container_logger - WARNING - Container stopped unexpectedly.
2025-12-04 20:59:14 - container_logger - WARNING - Container stopped unexpectedly.
2025-12-04 21:17:27 - container_logger - WARNING - Container stopped unexpectedly.
2025-12-05 19:48:23 - container_logger - WARNING - Container stopped unexpectedly.
2025-12-05 19:50:08 - container_logger - WARNING - Container stopped unexpectedly.
2026-01-01 01:58:47 - container_logger - WARNING - Container stopped unexpectedly.
2026-01-01 20:53:58 - container_logger - WARNING - Container stopped unexpectedly.
